--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
     <form method="get" action="#null">
       <h1>CatFacts</h1>
       <p>If you or your friends adore cats, sign-up for CatFacts!</p>
-      <ol>
-        <li>
-          <label for="name">Full Name</label>
-          <input type="text" name="name" id="name"/>
-        </li>
-        <li>
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email"/>
-        </li>
-        <li>
-          <input type="submit" name="submit" id="submit" value="Sign-up"/>
-        </li>
-      </ol>
+      <fieldset>
+        <ol>
+          <li>
+            <label for="name">Full Name: </label>
+            <input type="text" name="name" id="name"/>
+          </li>
+          <li>
+            <label for="email">Email: </label>
+            <input type="email" name="email" id="email"/>
+          </li>
+          <li>
+            <input type="submit" name="submit" id="submit" value="Sign-up Now!"/>
+          </li>
+        </ol>
+      </fieldset>
     </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/site.js"></script>
