--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
       <fieldset>
         <ol>
           <li>
-            <label for="name">Full Name: </label>
-            <input type="text" name="name" id="name"/>
+            <label for="fname">First Name: </label>
+            <input type="text" name="fname" id="fname"/>
+          </li>
+          <li>
+            <label for="lname">Last Name: </label>
+            <input type="text" name="lname" id="lname"/>
           </li>
           <li>
             <label for="email">Email: </label>
