--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <input type="email" name="email" id="email"/>
           </li>
           <li>
+            <input type="checkbox" id="verification" name="verification"/>
+            <label for="verification">I Agree to Receiving CatFacts</label>
+          </li>
+          <li>
             <input type="submit" name="submit" id="submit" value="Sign-up Now!"/>
           </li>
         </ol>
