added pictures folder
moved png to folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form method="get" action="#null">
       <h1>CatFacts</h1>
       <p>If you or your friends adore cats, sign-up for CatFacts!</p>
-      <img id="cat" src="itmd362_project1/catfacts.jpg" alt="Cat">
+      <img id="cat" src="pictures/catfacts.png" alt="Cat">
       <fieldset>
         <ol>
           <li>
