--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   <body>
     <form method="get" action="#null">
-      <h1>CatFacts</h1>
-      <p>If you or your friends adore cats, sign-up for CatFacts!</p>
+      <h1 id="title">CatFacts</h1>
+      <p id="p1">If you or your friends adore cats, sign-up for CatFacts.</p>
+      <p>When you sign-up for CatFacts, you will receive random CatFacts!</p>
       <img id="cat" src="pictures/catfacts.png" alt="Cat">
       <fieldset>
         <ol>
