--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </li>
           <li>
             <label for="email">Email: </label>
-            <input type="email" name="email" id="email"/>
+            <input type="email" name="email" id="email" placeholder="email@domain"/>
           </li>
           <li>
             <input type="checkbox" id="verification" name="verification"/>
