--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   <body>
-    <form method="get" action="#null">
+    <form method="get" action="#null" autocomplete="on">
       <h1 id="title">CatFacts</h1>
       <p id="p1">If you or your friends adore cats, sign-up for CatFacts.</p>
       <p>When you sign-up for CatFacts, you will receive random CatFacts!</p>
