moved script to head
moved everything in script tags and put them into head tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/site.js"></script>
   </head>
   <body>
     <form method="get" action="#null" autocomplete="on">
@@ -17,6 +19,7 @@
       <p>When you sign-up for CatFacts, you will receive random CatFacts!</p>
       <img id="cat" src="pictures/catfacts.png" alt="Cat">
       <fieldset>
+        <legend>
         <ol>
           <li>
             <label for="fname">First Name: </label>
@@ -38,9 +41,8 @@
             <input type="submit" name="submit" id="submit" value="Sign-up Now!"/>
           </li>
         </ol>
+        </legend>
       </fieldset>
     </form>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/site.js"></script>
   </body>
 </html>
