changed verification location
change location of verification box and added margins for a cleaner look

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <input type="email" name="email" id="email" placeholder="email@domain"/>
           </li>
           <li>
-            <input type="checkbox" id="verification" name="verification"/>
-            <label for="verification">I Agree to Receiving CatFacts</label>
+            <label for="verification"><input type="checkbox" id="verification" name="verification"/>I Agree to Receiving CatFacts</label>
           </li>
           <li>
             <input type="submit" name="submit" id="submit" value="Sign-up Now!"/>
