--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <label for="verification"><input type="checkbox" id="verification" name="verification"/>I Agree to Receiving CatFacts</label>
           </li>
           <li>
-            <input type="submit" name="submit" id="submit" value="Sign-up Now!"/>
+            <input type="submit" name="submit" id="submit" value="Sign-up Now!" onclick="submission()"/>
           </li>
         </ol>
       </fieldset>
